corpus/positive/slicing.txt
==========================
Simple slice
==========================

inventory[0..3]

---

(source_file
  (slice_expression
    (identifier)
    (num)
    (num)))
==========================
Slice with open start
==========================

items[..5]

---

(source_file
  (slice_expression
    (identifier)
    (num)))
==========================
Slice with open end
==========================

items[2..]

---

(source_file
  (slice_expression
    (identifier)
    (num)))
==========================
Slice with expressions
==========================

data[start..start + 10]

---

(source_file
  (slice_expression
    (identifier)
    (identifier)
    (binary_expression
      (identifier)
      (num))))
==========================
Slice on method call result
==========================

get_items()[1..5]

---

(source_file
  (slice_expression
    (function_call
      (identifier)
      (argument_list))
    (num)
    (num)))
==========================
Slice assigned to variable
==========================

var subset = inventory[0..3]

---

(source_file
  (assignment
    (identifier)
    (slice_expression
      (identifier)
      (num)
      (num))))
==========================
Index and slice combined
==========================

grid[0][1..3]

---

(source_file
  (slice_expression
    (index_expression
      (identifier)
      (num))
    (num)
    (num)))
==========================
Nested slice
==========================

matrix[0..2][1..3]

---

(source_file
  (slice_expression
    (slice_expression
      (identifier)
      (num)
      (num))
    (num)
    (num)))
